* glob of .1ofN for PREFIX (without the initial extension to help the glob function)

Tooling
* detect maximum possible segment size on file system (e.g. FAT)

Test
* retrieve data from the information file on open
* make sure certain values cannot be changed if writing/reading from raw files
* add glob test to msvscpp project

Beta release
* remove deprecated functions in libsmraw_legacy.[ch]

20100716
* updated libuna, libbfio

20100714
* updated configure.ac
* updated include/error.h and liberror
* updated include/codepage.h
* updated common, libuna, libbfio

20100629
* fix for glob of .1of91 and larger

20100627
* updated common, libcstring, liberror, libuna, libbfio
* clean up
* fixed issue in glob_wide

20100624
* worked on support for XofN naming schema
* worked on segment identifier expansion

20100623
* worked on support for XofN naming schema
* fixes possible leaks in glob functions

20100617
* small fixes in glob function

20100616
* worked on segment file boundary read test scenario

20100615
* worked on loop test

20100614
* small changes
* worked on loop test

20100610
* small changes

20100512
* bug fix in integrity tests

20100511
* worked on integrity tests
* changed test scripts from sh to bash

20100508
* worked on integrity tests
* worked on glob tests
* fixed issue regarding SEEK_CUR and read
* fixed issue in glob

20100507
* worked on integrity tests

20100505
* worked on integrating test scripts into package
* some code clean up
* changed behavior of read to return 0 if offset is beyond size
* added missing libsmraw_definitions.h.in

20100504
* added MAINTAINERCLEANFILES to Makefile.am
* changed AM_INIT_AUTOMAKE arguments
* worked on integrating test scripts into package, use 'make check' to run

20100502
* updated common, libcstring, liberror, libnotify, libuna, libbfio
* changed amount of in number of

20100427
* small changes

20100426
* worked on additional naming schemas

20100418
* small changes

20100417
* added libcstring